--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>React Demo</title>
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-  <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <title>二手车拍卖</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+  <meta content="telephone=no" name="format-detection" />
   {% for (var css in o.htmlWebpackPlugin.files.css) { %}
   <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
   {% } %}
 </head>
-<body>
-
-  <div id="app"></div>
-
-<script src="/static/fetch.min.js"></script>
-<!-- <script src="//cdn.bootcss.com/fetch/1.0.0/fetch.min.js"></script>-->
-<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+<body id="AppBody">
 {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
 <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
 {% } %}
