--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>二手车拍卖</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <meta content="telephone=no" name="format-detection" />
+  <!-- <script src="//cdn.bootcss.com/qiniu-js/1.0.17.1/qiniu.min.js"></script> -->
   {% for (var css in o.htmlWebpackPlugin.files.css) { %}
   <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
   {% } %}
